fix finances headline values font size and centre align the labels and the values

--- a/scss/partials/_topic_finances_headline.scss
+++ b/scss/partials/_topic_finances_headline.scss
@@ -10,7 +10,7 @@ div.topic-finances-headline {
     div.finances-metric {
       width: 33%;
       float: left;
-      text-align: left;
+      text-align: center;
       font-size: 16px;
 
       &.cash {
@@ -19,15 +19,15 @@ div.topic-finances-headline {
 
       div.label {
         color: $oc_gray_3;
-        text-align: left;
+        text-align: center;
         padding: 0;
         margin: 0;
       }
 
       div.value {
-        font-size: 24px;
+        font-size: 22px;
         color: #444444;
-        text-align: left;
+        text-align: center;
         padding: 0;
         margin: 0;
 
